fixtures/rust/fallback/should_fail/hidden_payload.rs
struct ToolUsePayload;

pub fn render_tool_use(payload: ToolUsePayload) -> ToolUsePayload {
    payload
}
